src/styles/main.css
@import url('https://fonts.googleapis.com/css2?family=Source+Code+Pro&display=swap');

/* Base Elements */
* {
    font-family: 'Source Code Pro', monospace;
}

body {
    margin: 0;
}

a {
    text-decoration: none;
    color: #a0d2db;
}

hr {
    margin: 0 30px;
    border-color: #a0d2db;
}

h1 {
    font-size: 35px;
}

img {
    cursor: pointer;
}

input {
    border: none;
    height: 30px;
    width: 200px;
    font-size: 35px;
    text-align: center;
    background-color: #2e2e3a;
    color: #ffffff;
    border-color: gray;
    margin-left: 0;
    padding: 30px 0;
}

input:disabled {
    background-color: #9e9e9e;
    color: black;
}

input:focus {
    outline: none;
}

/* IDs */

#app {
    display: flex;
    flex-direction: column;
    height: 100vh;
    background-color: #2e2e3a;
    color: #ffffff;
    margin: 0;
    padding: 0;
}

/* Classes */
/* Header and Menu */
.header {
    display: flex;
    flex-direction: row;
}

.header-link {
    margin: 15px 30px;
    text-decoration: none;
    color: #a0d2db;
    font-size: 14px;
}

.header-link:hover {
    cursor: pointer;
}

.hamburger-button {
    margin: 10px 30px;
    cursor: pointer;
}

.bar-1,
.bar-2,
.bar-3 {
    width: 35px;
    height: 3px;
    background-color: #a0d2db;
    margin: 6px 0;
    transition: 0.4s;
}

.open>.bar-1 {
    transform: translate(0, 9px) rotate(-45deg);
    transition-duration: (100);
}

.open>.bar-2 {
    opacity: 0;
}

.open>.bar-3 {
    transform: translate(0, -9px) rotate(45deg);
}

.menu {
    display: none;
    z-index: 1;
    width: 100%;
    height: calc(100% - 55px);
    top: 55px;
    position: fixed;
    background-color: #2e2e3a;
}

.menu.open {
    display: block;
}

.menu-container {
    display: flex;
    flex-wrap: wrap;
    margin: 15px;
    justify-content: space-evenly;
}

.menu-item {
    display: flex;
    justify-content: center;
    align-items: center;
    text-align: center;
    padding: 30px;
    border: 1px solid #a0d2db;
    border-radius: 20px;
    margin: 15px;
    height: 50px;
    width: 50px;
}

.menu-item svg {
    font-size: 40px;
}

/* Main content */
.body {
    text-align: center;
    margin: auto;
}

.footer {
    text-align: center;
    color: #a0d2db;
}

.footer-tipjar-text {
    margin-left: 0.5em;
}

.flex {
    display: flex;
}

.flex-1 {
    flex: 1;
}

.flex-center {
    justify-content: center;
    align-items: center;
}

.flex-column {
    flex-direction: column;
}

.relative {
    position: relative;
}

.conversion-container {
    flex-direction: column;
}

.conversion-block {
    flex-direction: column;
    text-align: inherit;
}

.conversion-block>* {
    flex: 1;
    font-size: 20px;
}

.conversion-icons {
    margin: 20px 0;
    flex-direction: row;
}

.conversion-icon {
    rotate: 90deg;
}

.title {
    color: #a0d2db;
}

.underline-text {
    text-decoration: underline;
}

.unit-label {
    cursor: pointer;
    justify-content: space-between;
}

.dropdown-container {
    position: relative;
    width: 100%;
    background-color: #2e2e3a;
    color: #ffffff;
    border: 1px solid #a0d2db;
    border-top-style: dashed;
    border-bottom-left-radius: 5px;
    border-bottom-right-radius: 5px;
}

.dropdown-container-active {
    border-bottom-style: dashed;
    border-radius: 0;
}

.dropdown {
    border: 1px solid #a0d2db;
    border-top: none;
    border-bottom-left-radius: 5px;
    border-bottom-right-radius: 5px;
    margin-top: 1px;
    margin-left: -1px;
    position: absolute;
    width: 100%;
    background-color: #2e2e3a;
    min-width: fit-content;
    font-size: 16px;
    z-index: 1;
}

.dropdown>p {
    margin: 5px 10px;
    cursor: pointer;
}

.dropdown>p:hover {
    text-decoration: underline;
}

.dropdown-arrow {
    border: solid #ffffff;
    border-width: 0 3px 3px 0;
    display: inline-block;
    padding: 3px;
    transform: rotate(45deg);
    margin: auto;
}

.active-dropdown {
    color: #a0d2db;
    text-decoration: underline;
}

.input-container {
    display: flex;
    flex-direction: row;
    align-items: center;
    outline: 1px solid #a0d2db;
    border-bottom: none;
    border-top-left-radius: 5px;
    border-top-right-radius: 5px;
}

.input-symbol-container {
    width: 50px;
    background-color: #2e2e3a;
    padding: 20px 0;
    text-align: center;
}

.input-symbol {
    margin: 0;
    line-height: 50px;
    border-left: 1px dashed #a0d2db;
    color: #a0d2db;
}

.cursor-pointer {
    cursor: pointer;
}

/* Margins & Paddings */
.margin-auto {
    margin: auto;
}

.margin-10 {
    margin: 10px;
}

.margin-right-5 {
    margin-right: 5px;
}

.margin-left-5 {
    margin-left: 5px;
}

.margin-bottom-50 {
    margin-bottom: 50px;
}

.padding-15 {
    padding: 15px;
}

.padding-left-15 {
    padding-left: 15px;
}


/* Media Queries */
@media screen and (min-width: 900px) {
    .conversion-container {
        flex-direction: row;
    }

    .conversion-icons {
        flex-direction: column;
        margin: 0 40px;
    }
}

@media screen and (min-width: 500px) {
    input {
        width: 300px;
    }

    .menu-container {
        justify-content: start;
    }
}

